Made GraalVM plugin work with Jetty and JDK 19